--- a/login/login.html
+++ b/login/login.html
@@ -139,6 +139,7 @@
 <script type="text/javascript" src="../background/scripts/jquery/jquery.js"></script>
 <script src="../background/scripts/material/material.js"></script>
 <script src="../background/scripts/material/ripples.js"></script>
+<script type="text/javascript" src="../background/scripts/pwstrength/zxcvbn.js"></script>
 <script type="text/javascript" src="../background/scripts/pwstrength/dist/pwstrength-bootstrap.min.js"></script>
 <script type="text/javascript" src="../background/scripts/cryptojs/rollups/sha512.js"></script>
 <script type="text/javascript" src="../background/scripts/cryptojs/rollups/pbkdf2.js"></script>
