add fixed margin to prevent menu overlapping;search for actual name only

--- a/background/background.html
+++ b/background/background.html
@@ -46,7 +46,7 @@
 
  <nav class="navbar navbar-default navbar-fixed-top navbar-mp">
    <div id="burger"><i class="material-icons">menu</i></div>
-   <div class="container">
+   <div class="container fixed">
     <form>
       <div class="form-group search has-feedback has-feedback-left">
         <input id="search" type="text" class="form-control" placeholder="Search" />
@@ -58,11 +58,11 @@
 
 <aside id='sidebar'>
   <div class="sidebar-head"></div>
-  <div class="sidebar-row active" id="sidebar-categories">
+  <div class="sidebar-row active" id="sidebar-categories" data-toggle="tooltip" data-placement="right" title="Categories">
     <i class="material-icons">book</i>
     <p>Categories</p>
   </div>
-  <div class="sidebar-row" id="sidebar-unique">
+  <div class="sidebar-row" id="sidebar-unique"  data-toggle="tooltip" data-placement="right" title="Unique Passwords">
     <i class="material-icons">list</i>
     <p>Unique Passwords</p>
   </div>
@@ -71,18 +71,18 @@
     <p>PW Modifications</p>
   </div> -->
   <hr>
-  <div class="sidebar-row" id="sidebar-preferences">
+  <div class="sidebar-row" id="sidebar-preferences"  data-toggle="tooltip" data-placement="right" title="Preferences">
     <i class="material-icons">build</i>
     <p>Preferences</p>
   </div>
-  <div class="sidebar-row" id="sidebar-about">
+  <div class="sidebar-row" id="sidebar-about"  data-toggle="tooltip" data-placement="right" title="About">
     <i class="material-icons">info</i>
     <p>About</p>
   </div>
 </aside>
 
 
-<div class="container">
+<div class="container fixed">
   <div class="mp-section" id="section-categories">
     <div class="row content" id="content">
      <div class="page-header">
