login ui changes; webex ID added; build 1.12

--- a/background/background.html
+++ b/background/background.html
@@ -207,7 +207,7 @@
      <div class="modal-body">
        <form role="form" data-toggle="validator">
         <div class="form-group has-feedback">
-          <label for="category-name">Category Name</label>
+          <!-- <label for="category-name">Category Name</label> -->
           <input type="text" minlength="1" class="form-control" id="modalCategoryName" placeholder="Category Name" required>
           <span class="glyphicon form-control-feedback" ></span>
           <div class="help-block with-errors"></div>
