--- a/login/login.html
+++ b/login/login.html
@@ -28,10 +28,13 @@
   </form>
 </div>
 <div class="login-container onboarding bg hidden">
+<img class="icon" src="../icons/icon-48.png">
  <div class="row">
    <div class="col-lg-12">
-    <h2 class="text-center">Welcome to [PWRM]</h2>
-    <p>Please create a Master-Password to keep your local storage safe.</p>
+    <h3 class="text-center">Welcome to PWRM</h3>
+
+    <h2 class="text-center login-title"> Password-Reuse-Manager</h2>
+    <p>Please create a Masterpassword to keep your local storage safe. Memorizing this single password is very important. You might keep a physical note in case you forget it.</p>
   </div>
 </div>  
 <form class="mpw">
@@ -44,6 +47,7 @@
 </form>
 </div>
 <div class="login-container onboarding_2 bg hidden">
+<img class="icon" src="../icons/icon-48.png">
  <div class="row">
    <div class="col-lg-12">
     <h2 class="text-center">Remember it?</h2>
@@ -57,6 +61,7 @@
   <div class="text-right" style="margin-top: 60px">
     <a class="btn btn-primary btn-mp btn-lg btn-block btn-raised">Let's Start</a>
   </div>
+   <a id="restart" class="link">Problems? Start over again.</a>
 </form>
 </div>
 <div class="login-container onboarding_3 bg hidden">
@@ -66,7 +71,8 @@
       <div class="slide">
         <h2 class="text-center">Isn't that great?</h2>
         <p>We help to organise your <strong>unique</strong> and <strong>reused</strong> passwords just like you are already used to do.</p>
-        <p>You can create <strong>Password Categories</strong> without even storing a single password.</p>
+        <p>You can create <strong>Password Categories</strong> to remember passwords you use for multiple online accounts.</p>
+        <p>Nevertheless, you can store any password if you wish to. Stored Passwords are encrypted and only kept locally in your browser's storage.</p> 
       </div>
       <div class="slide">
         <h2 class="text-center">How do you organise your passwords?</h2>
