--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,7 +19,8 @@
 				<img class="placeholder-img" src="">
 			</div>
 			<div class="grid middle">
-				<span id="thisURL"></span>
+				<span id="thisURL"></span><br>
+				<p id="ask"></p>
 			</div>
 			<div id="fab_wrapper">
 			 	<div id="fab_content">
