close FAB when clicked elsewhere

--- a/background/background.html
+++ b/background/background.html
@@ -60,7 +60,7 @@
   <div class="sidebar-head"></div>
   <div class="sidebar-row active" id="sidebar-categories" data-toggle="tooltip" data-placement="right" title="Categories">
     <i class="material-icons">book</i>
-    <p>Categories</p>
+    <p>Category Passwords</p>
   </div>
   <div class="sidebar-row" id="sidebar-unique"  data-toggle="tooltip" data-placement="right" title="Unique Passwords">
     <i class="material-icons">list</i>
@@ -86,8 +86,8 @@
   <div class="mp-section" id="section-categories">
     <div class="row content" id="content">
      <div class="page-header">
-       <h1><i class="material-icons"></i>Password Categories</h1>
-       <p class="section-content">Organise your reused passwords - each password category represents a single password. You can assign multiple accounts that (re)use that password to a category. The actual storage of passwords is optional.</p>
+       <h1><i class="material-icons"></i>Category Passwords</h1>
+       <p class="section-content">Organise your reused passwords - each category password represents a single password. You can assign multiple accounts that (re)use that password to a category. The actual storage of passwords is optional.</p>
      </div>
      <div id="categoryContainer"></div>
    </div>
@@ -292,7 +292,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="optionsRadios" id="optionsRadios1" value="option-category" checked="true"><span class="circle"></span><span class="check"></span>
-                Assign to a password category
+                Assign to a Category Password
               </label>
               <label class="active"></label>
             </div>
