--- a/background/background.html
+++ b/background/background.html
@@ -74,7 +74,7 @@
     <i class="material-icons">build</i>
     <p>Preferences</p>
   </div>
-  <div class="sidebar-row" id="sidebar-about"  data-toggle="tooltip" data-placement="right" title="About">
+  <div class="sidebar-row hidden" id="sidebar-about"  data-toggle="tooltip" data-placement="right" title="About">
     <i class="material-icons">info</i>
     <p>About</p>
   </div>
