--- a/login/login.html
+++ b/login/login.html
@@ -121,10 +121,7 @@
     <label>
       <input type="radio" name="optionsRadios" id="optionsRadios4" value="mode_hints">
       <div class="radio-content">
-       <div class="name">Hints help me to organise</div>
-       <span class="label label-default label-mp">Dog Password</span>
-       <span class="label label-default label-mp">Long Password</span>
-       <span class="label label-default label-mp">Festival 2009</span>
+       <div class="name">None of the above</div>
        <span class="label label-default label-mp">Other</span>
      </div>
    </label>
