add images for intro

--- a/login/login.html
+++ b/login/login.html
@@ -51,7 +51,7 @@
  <div class="row">
    <div class="col-lg-12">
     <h2 class="text-center">Remember it?</h2>
-    <p>Please type it again and make sure you don't forget it.</p>
+    <p>Please type it again and make sure you don't forget it. You can write it down and keep a note at your home.</p>
   </div>
 </div>  
 <form class="mpw">
@@ -71,8 +71,20 @@
       <div class="slide">
         <h2 class="text-center">Isn't that great?</h2>
         <p>We help to organise your <strong>unique</strong> and <strong>reused</strong> passwords just like you are already used to do.</p>
-        <p>You can create <strong>Password Categories</strong> to remember passwords you use for multiple online accounts.</p>
+        <p>You can create <strong>Category Passwords</strong> to remember passwords you use for multiple online accounts.</p>
         <p>Nevertheless, you can store any password if you wish to. Stored Passwords are encrypted and only kept locally in your browser's storage.</p> 
+      </div>
+       <div class="slide pic">
+        <img src="intro_1.png">
+      </div>
+      <div class="slide pic">
+        <img src="intro_2.png">
+      </div>
+      <div class="slide pic">
+        <img src="intro_3.png">
+      </div>
+         <div class="slide pic">
+        <img src="intro_4.png">
       </div>
       <div class="slide">
         <h2 class="text-center">How do you organise your passwords?</h2>
