--- a/login/login.html
+++ b/login/login.html
@@ -11,7 +11,7 @@
   <link href="../background/css/material/ripples.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../background/css/mp.css"/>
   <link rel="stylesheet" href="login.css"/>
-  <title>PWM Title</title>
+  <title>Password-Reuse-Manager</title>
 </head>
 
 <body class="bg login">
@@ -71,7 +71,7 @@
       <div class="slide">
         <h2 class="text-center">Isn't that great?</h2>
         <p>We help to organise your <strong>unique</strong> and <strong>reused</strong> passwords just like you are already used to do.</p>
-        <p>You can create <strong>Category Passwords</strong> to remember passwords you use for multiple online accounts.</p>
+        <p>You can create <strong>Reuse Passwords</strong> to remember passwords you use for multiple online accounts.</p>
         <p>Nevertheless, you can store any password if you wish to. Stored Passwords are encrypted and only kept locally in your browser's storage.</p> 
       </div>
        <div class="slide pic">
