--- a/background/background.html
+++ b/background/background.html
@@ -59,7 +59,7 @@
   <div class="sidebar-head"></div>
   <div class="sidebar-row active" id="sidebar-categories" data-toggle="tooltip" data-placement="right" title="Categories">
     <i class="material-icons">book</i>
-    <p>Category Passwords</p>
+    <p>Reuse Passwords</p>
   </div>
   <div class="sidebar-row" id="sidebar-unique"  data-toggle="tooltip" data-placement="right" title="Unique Passwords">
     <i class="material-icons">list</i>
@@ -85,8 +85,8 @@
   <div class="mp-section" id="section-categories">
     <div class="row content" id="content">
      <div class="page-header">
-       <h1><i class="material-icons"></i>Category Passwords</h1>
-       <p class="section-content">Organise your reused passwords - each category password represents a single password. You can assign multiple accounts that (re)use that password to a category. The actual storage of passwords is optional.</p>
+       <h1><i class="material-icons"></i>Reuse Passwords</h1>
+       <p class="section-content">Organise your reused passwords - each element represents a single password. You can assign multiple accounts that (re)use that password to a category. The actual storage of passwords is optional.</p>
      </div>
      <div id="categoryContainer"></div>
    </div>
@@ -222,7 +222,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="optionsRadios" id="optionsRadios1" value="option-category" checked="true"><span class="circle"></span><span class="check"></span>
-                Assign to a Category Password
+                Assign to a Reuse Password
               </label>
               <label class="active"></label>
             </div>
@@ -238,7 +238,7 @@
         <div class="form-group radio-option option-category" value="option-category">
           <label for="categoryDropdown">Choose Password Category</label>
           <select class="form-control" id="categoryDropdown"><!-- fill <options> on init() --></select>
-          <a class="link" data-toggle="modal" data-target="#modalCategory">Create new Category Password</a>
+          <a class="link" data-toggle="modal" data-target="#modalCategory">Create new Reuse Password</a>
         </div>
         <div class="form-group has-feedback radio-option option-pwd hidden" value="option-pwd">
           <label for="enterPWD">Enter a Unique Password</label>
@@ -261,7 +261,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-       <h2 class="modal-title" id="myModalLabel">Category Password</h2>
+       <h2 class="modal-title" id="myModalLabel">Reuse Password</h2>
      </div>
      <div class="modal-body">
        <form role="form" data-toggle="validator">
@@ -277,13 +277,13 @@
      
 
         <div id="enter-category-pwd" class="form-group has-feedback hidden">
-          <label for="category-pwd">Enter a Category Password</label>
+          <label for="category-pwd">Enter a Reuse Password</label>
           <input type="password" minlength="1" class="form-control" id="category-pwd" placeholder="Password" required>
           <span class="glyphicon form-control-feedback" ></span>
           <div class="help-block with-errors"></div>
         </div>
         <div id="enter-category-hint" class="form-group has-feedback">
-          <label for="category-hint">Enter a Hint for this Category Password</label>
+          <label for="category-hint">Enter a Hint for this Reuse Password</label>
           <input type="text" minlength="1" class="form-control" id="category-hint" placeholder="Your hint" required>
           <span class="glyphicon form-control-feedback" ></span>
           <div class="help-block with-errors"></div>
