--- a/login/login.html
+++ b/login/login.html
@@ -25,7 +25,7 @@
   <form>
     <div class="form-group mpw">
       <input type="password" class="form-control" id="inputMPW_login" placeholder="Your Masterpassword">
-      <button id="submitlogin" class="btn-mp">CONFIRM</button>
+      <button id="submitlogin" class="btn.btn-mp.light">CONFIRM</button>
     </div>
   </form>
 </div>
@@ -74,7 +74,7 @@
         <h2 class="text-center">Isn't that great?</h2>
         <p>We help to organise your <strong>unique</strong> and <strong>reused</strong> passwords just like you are already used to do.</p>
         <p>You can create <strong>Reuse Passwords</strong> to remember passwords you use for multiple online accounts.</p>
-        <p>Nevertheless, you can store any password if you wish to. Stored Passwords are encrypted and only kept locally in your browser's storage.</p> 
+        <p>Nevertheless, you can store any password if you wish to. Stored Passwords are encrypted and only kept locally in your browser's storage. If you are using a Firefox Account, your stored information is synchronized across devices.</p> 
       </div>
        <div class="slide pic">
         <img src="intro_1.png">
