add strength meter to unique entries; fix search function

--- a/background/background.html
+++ b/background/background.html
@@ -36,8 +36,8 @@
      <div class="water-drop"></div>
      <div class="button button-floating"></div>
      <div class="button-floating-shadow"></div>
-     <div class="button button-sub" data-toggle="modal" data-target="#modal-newEntry"><p class="next-to-button">Account</p><div class="text-center"><i class="material-icons">bookmark</i></div></div>
-     <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><p class="next-to-button">Password</p><div class="text-center"><i class="material-icons">book</i></div></div>
+     <div class="button button-sub" data-toggle="modal" data-target="#modal-newEntry"><p class="next-to-button">Account Entry</p><div class="text-center"><i class="material-icons">bookmark</i></div></div>
+     <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><p class="next-to-button">Reuse Password</p><div class="text-center"><i class="material-icons">book</i></div></div>
      <!--  <div class="button button-sub" data-toggle="modal" data-target="#modalModification"><p class="next-to-button">Modification</p><div class="text-center"><i class="material-icons">cached</i></div></div> -->
    </div>
  </div>
