--- a/background/background.html
+++ b/background/background.html
@@ -37,7 +37,7 @@
      <div class="button button-floating"></div>
      <div class="button-floating-shadow"></div>
      <div class="button button-sub" data-toggle="modal" data-target="#modal-newEntry"><p class="next-to-button">Account Entry</p><div class="text-center"><i class="material-icons">bookmark</i></div></div>
-     <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><p class="next-to-button">Reuse Password</p><div class="text-center"><i class="material-icons">book</i></div></div>
+     <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><p class="next-to-button">Reused Password</p><div class="text-center"><i class="material-icons">book</i></div></div>
      <!--  <div class="button button-sub" data-toggle="modal" data-target="#modalModification"><p class="next-to-button">Modification</p><div class="text-center"><i class="material-icons">cached</i></div></div> -->
    </div>
  </div>
@@ -59,7 +59,7 @@
   <div class="sidebar-head"></div>
   <div class="sidebar-row active" id="sidebar-categories" data-toggle="tooltip" data-placement="right" title="Categories">
     <i class="material-icons">book</i>
-    <p>Reuse Passwords</p>
+    <p>Reused Passwords</p>
   </div>
   <div class="sidebar-row" id="sidebar-unique"  data-toggle="tooltip" data-placement="right" title="Unique Passwords">
     <i class="material-icons">list</i>
@@ -85,7 +85,7 @@
   <div class="mp-section" id="section-categories">
     <div class="row content" id="content">
      <div class="page-header">
-       <h1><i class="material-icons"></i>Reuse Passwords</h1>
+       <h1><i class="material-icons"></i>Reused Passwords</h1>
        <p class="section-content">Organise your reused passwords - each card element represents a single password. You can assign multiple accounts that (re)use that password to a "category". The actual storage of passwords is optional.</p>
      </div>
      <div id="categoryContainer"></div>
@@ -222,7 +222,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="optionsRadios" id="optionsRadios1" value="option-category" checked="true"><span class="circle"></span><span class="check"></span>
-                Assign to a Reuse Password
+                Assign to a Reused Password
               </label>
               <label class="active"></label>
             </div>
@@ -236,9 +236,9 @@
        </form>
        <form role="form" data-toggle="validator">
         <div class="form-group radio-option option-category" value="option-category">
-          <label for="categoryDropdown">Choose Reuse Password</label>
+          <label for="categoryDropdown">Choose Reused Password</label>
           <select class="form-control" id="categoryDropdown"><!-- fill <options> on init() --></select>
-          <a class="link" data-toggle="modal" data-target="#modalCategory">Create new Reuse Password</a>
+          <a class="link" data-toggle="modal" data-target="#modalCategory">Create new Reused Password</a>
         </div>
         <div class="form-group has-feedback radio-option option-pwd hidden" value="option-pwd">
           <label for="enterPWD">Enter a Unique Password</label>
@@ -261,7 +261,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-       <h2 class="modal-title" id="myModalLabel">Reuse Password</h2>
+       <h2 class="modal-title" id="myModalLabel">Reused Password</h2>
      </div>
      <div class="modal-body">
        <form role="form" data-toggle="validator">
@@ -277,13 +277,13 @@
      
 
         <div id="enter-category-pwd" class="form-group has-feedback hidden">
-          <label for="category-pwd">Enter a Reuse Password</label>
+          <label for="category-pwd">Enter a Reused Password</label>
           <input type="password" minlength="1" class="form-control" id="category-pwd" placeholder="Password" required>
           <span class="glyphicon form-control-feedback" ></span>
           <div class="help-block with-errors"></div>
         </div>
         <div id="enter-category-hint" class="form-group has-feedback">
-          <label for="category-hint">Enter a Hint for this Reuse Password</label>
+          <label for="category-hint">Enter a Hint for this Reused Password</label>
           <input type="text" minlength="1" class="form-control" id="category-hint" placeholder="Your Hint (e.g. my first movie & old password)" required>
           <span class="glyphicon form-control-feedback" ></span>
           <div class="help-block with-errors"></div>
