--- a/login/login.html
+++ b/login/login.html
@@ -11,7 +11,10 @@
   <link href="../background/css/material/ripples.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../background/css/mp.css"/>
   <link rel="stylesheet" href="login.css"/>
+  <script type="text/javascript" src="../background/scripts/pwstrength/zxcvbn.js"></script> 
+  
   <script data-main="applogin" src="../background/scripts/requirejs/require.js"></script>
+
   <title>Password-Reuse-Manager</title>
 </head>
 
@@ -152,13 +155,13 @@
 <a id="next"><i class="material-icons">keyboard_arrow_right</i></a>
 </div>
 </div>  
-</div>
+</div> 
 <script type="text/javascript" src="../background/scripts/jquery/jquery.js"></script>
 <script src="../background/scripts/material/material.js"></script>
 <script src="../background/scripts/material/ripples.js"></script>
-<script type="text/javascript" src="../background/scripts/pwstrength/zxcvbn.js"></script>
+ 
 <script type="text/javascript" src="../background/scripts/pwstrength/dist/pwstrength-bootstrap.min.js"></script>
-<script type="text/javascript" src="../background/scripts/cryptojs/rollups/sha512.js"></script>
+ <script type="text/javascript" src="../background/scripts/cryptojs/rollups/sha512.js"></script>
 <script type="text/javascript" src="../background/scripts/cryptojs/rollups/pbkdf2.js"></script>
 <script type="text/javascript" src="../background/scripts/cryptojs/rollups/aes.js"></script>
 <script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/jsbn.js"></script>
@@ -167,9 +170,9 @@
 <script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/rsa.js"></script>
 <script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/aes.js"></script>
 <script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/api.js"></script>
-<script type="text/javascript" src="../background/scripts/cryptico/cryptico.js"></script>
+<script type="text/javascript" src="../background/scripts/cryptico/cryptico.js"></script> 
+  <!-- <script type="text/javascript" src="login.js"></script>  -->
 
-<script type="text/javascript" src="login.js"></script>
 </body>
 
 </html>
